added global section gitignore for vscode
Signed-off-by: Tony Simoes <sr.tony@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,10 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-/.vscode/
+# Vscode : https://github.com/github/gitignore/tree/master/Global
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
